# ez-music-manage

./: .gitignore  README.md  ez_music_manage.spec  fix_dadastation_cover.py  launcher.py  main.py  pyproject.toml  standrad.md  音乐metadata管理WebApp需求设计.md
assets/icon/: emm_app_icon.icns
frontend/: index.html
routers/: batch.py  cover.py  library.py  lrc.py  settings.py  songs.py
scripts/: build_dmg.sh  build_icon.sh  round_icon.py
services/: cover_search.py  lyrics.py  metadata.py  metadata_search.py  runtime.py  scanner.py  settings.py
